--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Berkbid's GitHub Page
+description: A collection of projects I have worked on over the last few years
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-slate
