--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Berkbid's GitHub Page
 description: A collection of projects I have worked on over the last few years
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
