--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Berkbid's GitHub Page
+title: Berkeley Bidwell's Portfolio
 description: A collection of projects I have worked on over the last few years
 show_downloads: false
 google_analytics:
